--- a/src/mdv/styles/_vars.scss
+++ b/src/mdv/styles/_vars.scss
@@ -76,6 +76,8 @@ $font-primary-size: 14px;
 }
 
 body.theme-dark {
+  color-scheme: dark;
+
   // Layout
   --main-bg: #1e1e1e;
   
