--- a/src/mdv/styles/markdown.scss
+++ b/src/mdv/styles/markdown.scss
@@ -34,6 +34,13 @@ $list-indent: 30px;
 $list-item-gap: 10px;
 
 // ============================================================================
+// Base Styles
+// ============================================================================
+body {
+  background-color: $main-bg;
+}
+
+// ============================================================================
 // Markdown Container
 // ============================================================================
 #markdown-body {
